<resources>
    <string name="app_name">ONGAndroid</string>
    <!-- Home -->
    <string name="description_img_home">Image slides</string>
    <string name="slide_descriptions">Slide Descriptions</string>
    <string name="slide_name">Slide Name</string>
    <string name="description_img_logo">Logo home</string>
    <string name="image_slide">Image Slide</string>
    <string name="contact_us">Contactanos</string>
    <string name="want_to_join">¡Quiero ser parte!</string>
    <string name="news">Novedades</string>
    <string name="activities">Actividades</string>
    <string name="want_to_contribute">¿Quieres contribuir?</string>
    <string name="donate">Donar</string>
    <string name="contact_with_us">¡Contactate con nosotros!</string>
    <!-- Testimonials -->
    <string name="testimony_name">Nombre y Apellido</string>
    <string name="description_testimony">Description testimony</string>
    <string name="testimonios">Testimonios</string>
    <string name="add_my_testimonial">Agregar mi testimonio</string>
    <string name="img_testimony">Imagen de testimonio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vector_down">Vector down</string>
    <!-- Contact -->
    <string name="success_dialog">Éxito</string>
    <string name="contact_success_dialog_detail">Mensaje enviado correctamente</string>
    <string name="ok">Aceptar</string>
    <string name="hello_contact_fragment">Fragment Contact</string>
    <string name="hint_name">Nombre y Apellido</string>
    <string name="hint_email">Email</string>
    <string name="hint_message">Mensaje</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="required_name">El nombre debe contener al menos 5 letras</string>
    <string name="required_email">Email inválido</string>
    <string name="message_sent">Mensaje enviado correctamente</string>
    <string name="required_send_message">El mensaje debe contener al menos 10 letras</string>
    <string name="api_failed_error">Ha ocurrido un error. Intente nuevamente mas tarde</string>
    <!-- Staff -->
    <string name="hello_staff_fragment">Fragment Staff</string>
    <string name="our_staff">¡Nuestro staff!</string>
    <string name="name_detail_members">Nombre y Apellido</string>
    <string name="descriptions_detail_members">Descripción</string>
    <string name="link_linkedin">Link hacia Linkedin</string>
    <string name="link_facebook">Link hacia Facebook</string>
    <string name="logo_facebook">Logo Facebook</string>
    <string name="logo_linkedin">Logo Linkedin</string>
    <!-- News -->
    <string name="tv_news">Novedades</string>
    <!-- Error -->
    <string name="error_dialog">Error</string>
    <string name="error_dialog_detail">Ha ocurrido un error obteniendo la información</string>
    <string name="error_dialog_register">Ha ocurrido un error al registrar el usuario</string>
    <string name="try_again">Reintentar</string>
    <!-- Login -->
    <string name="hint_password">Contraseña</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_pass">Contraseña inválida</string>
    <string name="error_dialog_login">Ha ocurrido un error al iniciar sesión</string>
    <string name="btn_register">Login</string>
    <string name="register_string">No tienes cuenta? Registrate!</string>
    <string name="message_contact_error">Ha ocurrido un error. Intente nuevamente mas tarde</string>
    <string name="member_detail_title">Detalle</string>
    <string name="hint_repeat_password">Repite la contraseña</string>
    <string name="sign_up">Registrarme</string>
    <string name="have_account_log_in">Ya tienes cuenta? Ingresa!</string>
    <string name="pass_dont_match">Las contraseñas no coinciden</string>
    <string name="text_register_with">O ingresar con</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_google">Google</string>
    <string name="services_client_id">437343928226-l5ufc4hcc5aedmn3e5pssuv9ankm5h56.apps.googleusercontent.com</string>
    <string name="message_successful">El usuario se ha registrado con éxito</string>
    <string name="invalid_credentials">Credenciales Inválidas</string>
    <string name="error_login_description">Por favor revise los campos.</string>
    <string name="error_login_dialog">Error al iniciar sesión</string>
    <string name="facebook_app_id">742407650221123</string>
    <string name="fb_login_protocol_scheme">fb742407650221123</string>
    <string name="facebook_client_token">92a4f64f0b4904090ed4e1071cae5d37</string>
</resources>