<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_member_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_detail_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_margin_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scv_members_details" />



    <ScrollView
        android:id="@+id/scv_members_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_margin_middle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_detail_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/common_margin_middle"
                android:elevation="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingClass,MissingConstraints"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_detail_name"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_default"
                android:text="@string/name_detail_members"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_image" />

            <TextView
                android:id="@+id/tv_detail_descriptions"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_default"
                android:text="@string/descriptions_detail_members"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

            <View
                android:id="@+id/divider_line"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/common_margin_default"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_descriptions"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/iv_facebook_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_min"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_line"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView_facebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/logo_facebook"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/logo_facebook" />

                <TextView
                    android:id="@+id/member_detail_facebook"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:text="@string/link_facebook" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_logo_linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_default"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/iv_facebook_logo"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_linkedin_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/logo_linkedin"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:src="@drawable/logo_linkedin" />

                <TextView
                    android:id="@+id/member_detail_linkedin"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:text="@string/link_linkedin" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>