<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/color_yellow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_min">

        <ImageView
            android:id="@+id/iv_testimony_image"
            android:layout_width="48.24dp"
            android:layout_height="48.24dp"
            android:layout_marginStart="@dimen/common_margin_default"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/img_testimony"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_testimony_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_default"
            android:layout_marginTop="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_default"
            android:text="@string/testimony_name"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_testimony_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_testimony_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_margin_default"
            android:layout_marginEnd="@dimen/common_margin_default"
            android:layout_marginBottom="@dimen/common_margin_min"
            android:maxLines="3"
            android:text="@string/description_testimony"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_testimony_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_testimony_name"
            tools:text='"testimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimonio"' />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>